--- a/700.쉐도잉프로젝트/03.DC_PJ/02.구현소스/dc-app/src/css/layout.css
+++ b/700.쉐도잉프로젝트/03.DC_PJ/02.구현소스/dc-app/src/css/layout.css
@@ -16,6 +16,13 @@ main.cont{
     background-color: #fff;    
     font-family: 'Ubuntu Condensed', sans-serif;
 }
+/* 로그인 환영메시지 박스 */
+.logmsg{    
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
 .gnb{
     max-width: 1320px;
     margin: 0 auto;
@@ -130,7 +137,8 @@ input:focus{
 .info>ul>li:last-child{
     font-weight: bold;
 }
-.bmenu{
+/* 하단 ol>li>a 링크박스 */
+ol.bmenu{
     font-family: 'Ubuntu Condensed', sans-serif;
     display: flex;
     justify-content: center;
