--- a/700.쉐도잉프로젝트/03.DC_PJ/02.구현소스/dc-app/src/css/layout.css
+++ b/700.쉐도잉프로젝트/03.DC_PJ/02.구현소스/dc-app/src/css/layout.css
@@ -183,6 +183,9 @@ ol.bmenu{
 
 /* 1320px이하 미디어쿼리 */
 @media screen and (max-width:1320px) {
+    html,body{
+        overflow-x: hidden;
+    }
     body{
         padding-top: 58px;
         /* 첫번째 컨텐츠 가려짐방지 패딩 */
@@ -208,6 +211,15 @@ ol.bmenu{
 
 /* 1024px 이하 미디어쿼리 */
 @media screen and (max-width:1024px) {
+
+    /* 모바일 모드일때 넘치는 자식숨기기 */
+    .top-area{
+        overflow: hidden;
+    }
+    /* 로그인 환영 메세지 */
+    .logmsg{
+        top: 18px;
+    }
     .gnb{
         background-color: #fff;
     }
