--- a/700.쉐도잉프로젝트/03.DC_PJ/02.구현소스/dc-app/src/css/layout.css
+++ b/700.쉐도잉프로젝트/03.DC_PJ/02.구현소스/dc-app/src/css/layout.css
@@ -189,7 +189,6 @@ ol.bmenu{
     body{
         padding-top: 58px;
         /* 첫번째 컨텐츠 가려짐방지 패딩 */
-        overflow-x: hidden;
     }
     .top-area{
         /* 보이는 화면고정 */
@@ -200,7 +199,6 @@ ol.bmenu{
         padding: 0 20px;
         box-sizing: border-box;
         z-index: 9999;
-        overflow: hidden;
         transition: .4s ease-out;
     }
     .top-area.on{
@@ -216,10 +214,13 @@ ol.bmenu{
     .top-area{
         overflow: hidden;
     }
-    /* 로그인 환영 메세지 */
-    .logmsg{
+
+    /* 로그인 환영메시지박스 */
+    .logmsg {
         top: 18px;
     }
+
+    /* GNB박스 */
     .gnb{
         background-color: #fff;
     }
@@ -292,6 +293,10 @@ ol.bmenu{
         font-size: 11px;
         vertical-align: 2px;
         margin-left: 5px;
+    }
+    /* 서브메뉴 들어쓰기 없앰 */
+    .smenu{
+        text-indent: 0;
     }
     /* 검색박스 */
     .searchingGnb{
